Fix landing header section on mobile

--- a/src/pages/Landing/sections/Header/index.styl
+++ b/src/pages/Landing/sections/Header/index.styl
@@ -11,7 +11,6 @@
     padding 40px
     background url(/images/main-art-mobile@2x.png) center bottom no-repeat
     background-size 100% auto
-    height auto
 
   .content
     display flex
@@ -27,7 +26,6 @@
       padding 0
       max-width 100%
       width 100%
-      padding-top 0
       display block
 
     .content-info
